Cleaned up HTML5 and unneccessary CSS, attempting to resolve issue with top carousel not having any spacing below it.

--- a/css/sam.css
+++ b/css/sam.css
@@ -43,7 +43,7 @@ p {
 }
 
 html, body {
-    padding-top: 20px;
+    padding-top: 1em;
 }
 
 [data-role="dynamic-fields"] > .form-inline + .form-inline {
